# cursor-AI

./: Cursor-AI-Pruebas.postman_collection.json  DEPLOY_INSTRUCTIONS.md
.cursor/rules/: project-stack.mdc
.devcontainer/: devcontainer.json
Backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  test.db
Backend/app/: db.py  main.py  models.py
Backend/app/core/: config.py
Backend/app/db/: base.py
Backend/app/routers/: classes.py  courses.py  teachers.py
Frontend/: package-lock.json  package.json
Frontend/src/app/: layout.tsx  page.module.css  page.module.scss  page.tsx
Frontend/src/app/components/: CourseCard.tsx  CourseSkeleton.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  Notification.tsx  NotificationContainer.tsx
Frontend/src/app/courses/[slug]/: page.tsx
Frontend/src/app/hooks/: useNotification.ts
Frontend/src/lib/: api.ts
Frontend/src/types/: index.ts
Frontend/styles/: reset.scss  vars.scss
Mobile/: README_MOBILE_UPDATES.md
